feat/fix-api: fixed auth, tokens, spec
