# internal/models/models.go
@@ -43,12 +43,12 @@ var (
 )
 
 type RefreshToken struct {
-	ID        int64      `db:"id"`
-	UserID    int64      `db:"user_id"`
-	Token     string     `db:"token"`
-	ExpiresAt time.Time  `db:"expires_at"`
-	RevokedAt *time.Time `db:"revoked_at"`
-	CreatedAt time.Time  `db:"created_at"`
+	ID        int64     `db:"id"`
+	UserID    int64     `db:"user_id"`
+	Role      string    `db:"role"`
+	Token     string    `db:"token"`
+	ExpiresAt time.Time `db:"expires_at"`
+	CreatedAt time.Time `db:"created_at"`
 }
 
 type User struct {
@@ -95,6 +95,7 @@ type AuthResult struct {
 	Token        string   `json:"token"`
 	RefreshToken string   `json:"refresh_token"`
 }
+
 type Booking struct {
 	ID                int64      `db:"id"`
 	UserID            int64      `db:"user_id"`
@@ -217,4 +218,9 @@ type ApplicationUpdateRequest struct {
 
 func (r *ApplicationUpdateRequest) HasUpdates() bool {
 	return r.Status != nil || r.ContactInfo != nil || r.BoxID != nil || r.SpecialProjectID != nil
+}
+
+type RefreshResponse struct {
+	Token        string
+	RefreshToken string
 }
